// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component when HOME is rendered should match the HOME snapshot 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/",
    ]
  }
>
  <App />
</MemoryRouter>
`;

exports[`App component when Not Found page is rendered should match the Not Found snapshot 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/giberish",
    ]
  }
>
  <App />
</MemoryRouter>
`;
